--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 1rem;
 }
 
@@ -13,11 +13,180 @@ img {
     max-width: 100%;
 }
 
-/* .container {
+.container {
     width: 100%;
     height: 100vh;
+    margin: 0 auto;
     background: #3c5589;
     display: flex;
     justify-content: center;
     align-items: center;
-} */
+}
+
+.card {
+    width: 85%;
+    /* margin: 2em 3em; */
+    /* height: 85%; */
+    box-shadow: 0 0 40px 20px rgba(0, 0, 0, 0.26);
+    perspective: 1000px;
+}
+
+.inner-box {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    /* to make the card FLIPABLE */
+    /* transform: rotateY(-180deg);   */
+    transform-style: preserve-3d;
+
+    transition: transform 1s;
+}
+
+.card-front,
+.card-back {
+    position: absolute;
+    width: 100%;
+    /* height: 100%; */
+    background-position: center;
+    background-size: cover;
+    /* adding some king of cover to the img */
+    background-image: linear-gradient(rgba(0, 0, 100, 0.8), rgba(0, 0, 100, 0.8)), url(./img/me-with-laptop.jpeg);
+    padding: 3.75em;
+    box-sizing: border-box;
+    backface-visibility: hidden;
+}
+
+.card-back {
+    transform: rotateY(180deg);
+}
+
+.head {
+    /* font-family: 'Dancing Script', cursive; */
+    text-align: center;
+    background: rgba(0, 0, 0, 0.26);
+    padding: 6px;
+    color: #d2ebdde4;
+}
+
+.head h1 {
+    font-size: 2.5em;
+    /* font-weight: 700;     */
+    margin-bottom: 0;
+}
+
+.head h3 {
+    font-size: 1.5em;
+    font-weight: 700;
+    margin-top: 0;
+}
+.row {
+    display: flex;
+    color: #fff;
+    justify-content: space-between;
+}
+
+.one {
+    width: 25%;
+}
+
+.two {
+    width: 70%;
+}
+
+main a {
+    color: #fff;
+    text-decoration: none;
+    display: inline-block;
+    text-align: center;
+    font-size: 13px;
+    margin-top: 8px;
+}
+
+
+/*
+.card h2 {
+    font-weight: normal;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 1.25em;
+    color: hotpink;
+    border-bottom: 10px dotted purple;
+}
+
+
+.input-box {
+    width: 100%;
+    background: transparent;
+    border: 1px solid #fff;
+    margin: 6px 0;
+    height: 32px;
+    border-radius: 20px;
+    padding: 0 10px;
+    box-sizing: border-box;
+    outline: none;
+    text-align: center;
+    color: #fff;
+}
+
+
+::placeholder {
+    color: #fff;
+    font: 12px;
+}
+
+button {
+    width: 100%;
+    background: transparent;
+    border: 1px solid #fff;
+    margin: 35px 0 10px;
+    height: 32px;
+    font-size: 12px;
+    border-radius: 20px;
+    padding: 0 10px;
+    box-sizing: border-box;
+    outline: transparent;
+    color: #fff;
+    cursor: pointer;
+}
+
+.submit-btn {
+    position: relative;
+}
+
+.submit-btn::after {
+    HTML icon code
+    content: '\27a4';
+    color: #333;
+    line-height: 32px;
+    font-size: 17px;
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    background: #fff;
+    position: absolute;
+    right: -1px;
+    top: -1px;
+}
+
+span {
+    font-size: 13px;
+    margin-left: 10px;
+    color: #fff;
+}
+
+.card .btn {
+    margin-top: 70px;
+}
+
+.card a {
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    font-size: 13px;
+    margin-top: 8px;
+    
+}
+
+
+*/
